--- a/styles.css
+++ b/styles.css
@@ -11,22 +11,22 @@ button {
 
 .main-title {
   margin-left: 2em;
+  margin-right: 2em;
+  font-size: small;
 }
 
 #question-number {
   font-size: small;
-
 }
 
 #next {
   margin-top: 2em;
 }
 .question {
-  margin-bottom: 10px;
+  margin-bottom: 2em;
 }
 .quiz-container {
-  margin-left: 2em;
-  margin-top: 2em;
+  margin: 2em;
 }
 #quiz {
   display: flex;
