--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,10 @@ button {
   border: none;
   cursor: pointer;
   margin-bottom: 1em;
+  transition: all 0.2s;
+}
+button:hover {
+  transform: scale(1.05);
 }
 
 .main-title {
