--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ button:hover {
   transform: scale(1.05);
 }
 
-#exam, #training {
+#exam, #training, #mvd-tests, #gazprom-tests {
   font-size: larger;
 }
 
